fixed note inputs for android, fixed column edit button hover state, and fixed ready avatars in dark mode

--- a/src/components/BoardUsers/BoardUser.scss
+++ b/src/components/BoardUsers/BoardUser.scss
@@ -110,6 +110,12 @@
   .user-avatar #Circle-Background {
     stroke: $color-dark-one;
   }
+
+  .user-ready {
+    > .avatar #Circle-Background {
+      stroke: $color-grooming-green;
+    }
+  }
 }
 
 @keyframes draw {
