--- a/src/components/NoteInput/NoteInput.scss
+++ b/src/components/NoteInput/NoteInput.scss
@@ -53,6 +53,10 @@ $note-input__input-right: 40px;
   }
 }
 
+.note-input__add-button {
+  all: unset;
+}
+
 .note-input__icon {
   margin-right: $margin--default;
   width: 20px;
